# ygoDeckSearch

./: README.md  __init__.py  aiotest.py  pyproject.toml
src/plugins/ygodecksearch/plugins/: __init__.py
