[project]
name = "ygoDeckSearch"
version = "0.1.0"
description = "ygoDeckSearch"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_ygo"]
plugin_dirs = ["src/plugins/ygodecksearch"]
builtin_plugins = ["echo"]
